--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,13 @@ body {
   background-image: url(./media/weather_bg.png);
   background-position: center top;
   background-size: 1050px 790px;
-
+  font-family: garamond, "Book Antiqua", "Zapf Chancery", "papyrus", "Times New Roman";
 }
 
 .user {
   display: flex;
   justify-content: center;
+  gap: 0.3em;
 }
 
 .info {
@@ -15,6 +16,31 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 200px;
+  padding-top: 180px;
   padding-right: 250px;
+  font-size: large;
+}
+
+input, button {
+  font-family: garamond, "Book Antiqua", "Zapf Chancery", "papyrus", "Times New Roman";
+  font-size: larger;
+  border-radius: 7px;
+}
+
+.big {
+  font-size: xx-large;
+}
+
+#country {
+  font-size: x-small;
+}
+
+button {
+  background-color: rgb(164, 90, 38);
+  cursor: pointer;
+  color: wheat;
+}
+
+button:hover{
+  background-color: grey;
 }
